--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -1,2 +1,18 @@
-<h1>Admin#index</h1>
-<p>Find me in app/views/admin/index.html.erb</p>
+<div class="row">
+  <div class="medium-12 columns">
+  <div class="row">
+    <div class="medium-3 columns">
+      <div class="side-nav">
+        <%= render 'side_nav' %>
+      </div>
+    </div>
+    <div class="medium-9 columns">
+      <h3>Create a new text message update</h3>
+      <%= form_tag do %>
+        <%= text_area_tag :update, nil, rows: 3 %>
+        <%= submit_tag "SEND UPDATE", class: "button learn-more radius" %>
+      <% end %>
+    </div>
+  </div>
+  </div>
+</div>
