--- a/app/views/admin/survey_items.html.erb
+++ b/app/views/admin/survey_items.html.erb
@@ -1,2 +1,15 @@
-<h1>Admin#survey_items</h1>
-<p>Find me in app/views/admin/survey_items.html.erb</p>
+<div class="row">
+  <div class="medium-12 columns">
+  <div class="row">
+    <div class="medium-3 columns">
+      <div class="side-nav">
+        <%= render 'side_nav' %>
+      </div>
+    </div>
+    <div class="medium-9 columns">
+      <h3>Survey Results</h3>
+
+    </div>
+  </div>
+  </div>
+</div>
