add character counter, add update model

--- a/app/views/admin/_side_nav.html.erb
+++ b/app/views/admin/_side_nav.html.erb
@@ -1,9 +1,9 @@
 <ul class="side-nav">
   <li class="<%= li_admin_url_active? %>">
-    <%= link_to "NEW UPDATES", a_admin_url_active? %>
+    <%= link_to "NEW UPDATE", a_admin_url_active? %>
   </li>
   <li class="<%= li_admin_phone_numbers_url_active? %>">
-    <%= link_to "PHONE NUMBERS", a_admin_phone_numbers_url_active? %>
+    <%= link_to "SUBSCRIBERS", a_admin_phone_numbers_url_active? %>
   </li>
   <li class="<%= li_admin_survey_items_url_active? %>">
     <%= link_to "SURVEY RESULTS", a_admin_survey_items_url_active? %>
