added update resources, updated form in admin index to use form_for, add update callback to send update if send_immediately is true

--- a/app/assets/stylesheets/admin.css.scss
+++ b/app/assets/stylesheets/admin.css.scss
@@ -2,5 +2,5 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-textarea#update { margin-bottom: 0; }
-div#counter { margin-bottom: 35px; }
+textarea#update_content { margin-bottom: 0; }
+div#counter { margin-bottom: 30px; }
