--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -22,7 +22,9 @@ body.f-topbar-fixed { padding:0;}
 
 div.main-wrapper {
   margin-top: 65px;
-  padding: 30px 0;
+  @media #{$medium-up} {
+    padding: 20px 0;
+  }
 }
 
 .top-bar-logo {
