--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -105,3 +105,8 @@ div.message-wrapper {
     text-decoration: underline;
   }
 }
+div.side-nav {
+  @media #{$medium-up} {
+    position: fixed;
+  }
+}
