--- a/app/views/admin/survey_items.html.erb
+++ b/app/views/admin/survey_items.html.erb
@@ -6,7 +6,25 @@
     </div>
     <div class="medium-9 columns">
       <h3>Survey Results</h3>
-
+      <table class="admin-table">
+        <thead>
+          <tr>
+            <th>Date</th>
+            <th>From</th>
+            <th>Message</th>
+          </tr>
+        </thead>
+        <tbody>
+          <% @survey_items.each do |survey| %>
+            <tr>
+              <td><%= survey.created_at.strftime('%D') %></td>
+              <td><%= survey.phone_number || "--" %></td>
+              <td><%= survey.message %></td>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
+      <%= paginate @survey_items %>
     </div>
   </div>
   </div>
