--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -12,15 +12,38 @@
     <section class="top-bar-section">
       <!-- Right Nav Section -->
       <ul class="right">
-        <li><%= link_to "ABOUT", "#about", class: "smooth" %></li>
-        <li><%= link_to "WHEN", "#when", class: "smooth" %></li>
-        <li><%= link_to "SPONSORS", "#sponsors", class: "smooth" %></li>
-        <li><%= link_to "CONTACT", "#contact", class: "smooth" %></li>
+        <li>
+          <% if home? %>
+            <%= link_to "ABOUT", "#about", class: "smooth" %>
+          <% else %>
+            <%= link_to "ABOUT", root_url(anchor: "about"), class: "smooth" %>
+          <% end %>
+        </li>
+        <li>
+          <% if home? %>
+            <%= link_to "WHEN", "#when", class: "smooth" %>
+          <% else %>
+            <%= link_to "WHEN", root_url(anchor: "when"), class: "smooth" %>
+          <% end %>
+        </li>
+        <li>
+          <% if home? %>
+            <%= link_to "SPONSORS", "#sponsors", class: "smooth" %>
+          <% else %>
+            <%= link_to "SPONSORS", root_url(anchor: "sponsors"), class: "smooth" %>
+          <% end %>
+        </li>
+        <li>
+          <% if home? %>
+            <%= link_to "CONTACT", "#contact", class: "smooth" %>
+          <% else %>
+            <%= link_to "CONTACT", root_url(anchor: "contact"), class: "smooth" %>
+          <% end %>
+        </li>
         <li><%= link_to "BLOG", "http://thrivemarket.tumblr.com/" %></li>
         <% if signed_in? %>
-          <li>
-            <%= link_to "SIGN OUT", sign_out_url, method: "delete", class: "orange" %>
-          </li>
+          <li><%= link_to "ADMIN", admin_url, class: "orange" %></li>
+          <li><%= link_to "SIGN OUT", sign_out_url, method: "delete", class: "orange" %></li>
         <% end %>
       </ul>
     </section>
