add drop shadow to date cards, increase fotn of month

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -97,39 +97,47 @@
       <div class="dates">
         <ul class="small-block-grid-1 medium-block-grid-2 large-block-grid-4">
           <li>
-            <div class="month radius">
-              <p>June</p>
-            </div>
-            <div class="day">
-              <p>28</p>
-              <small>11AM - 2PM</small>
-            </div>
-          </li>
-          <li>
-            <div class="month radius">
-              <p>July</p>
-            </div>
-            <div class="day">
-              <p>26</p>
-              <small>11AM - 2PM</small>
+            <div class="date-card">
+              <div class="month radius">
+                <p>June</p>
+              </div>
+              <div class="day">
+                <p>28</p>
+                <small>11AM - 2PM</small>
+              </div>
             </div>
           </li>
           <li>
-            <div class="month radius">
-              <p>Aug</p>
-            </div>
-            <div class="day">
-              <p>23</p>
-              <small>11AM - 2PM</small>
+            <div class="date-card">
+              <div class="month radius">
+                <p>July</p>
+              </div>
+              <div class="day">
+                <p>26</p>
+                <small>11AM - 2PM</small>
+              </div>
             </div>
           </li>
           <li>
-            <div class="month radius">
-              <p>Sept</p>
+            <div class="date-card">
+              <div class="month radius">
+                <p>Aug</p>
+              </div>
+              <div class="day">
+                <p>23</p>
+                <small>11AM - 2PM</small>
+              </div>
             </div>
-            <div class="day">
-              <p>27</p>
-              <small>11AM - 2PM</small>
+          </li>
+          <li>
+            <div class="date-card">
+              <div class="month radius">
+                <p>Sept</p>
+              </div>
+              <div class="day">
+                <p>27</p>
+                <small>11AM - 2PM</small>
+              </div>
             </div>
           </li>
         </ul>
