--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -130,13 +130,18 @@ div.sponsors {
 }
 div.dates {
   margin-top: 30px;
+  .date-card {
+    -moz-box-shadow:    2px 2px 2px 2px #999;
+    -webkit-box-shadow: 2px 2px 2px 2px #999;
+    box-shadow:         2px 2px 2px 2px #999;
+  }
   .month {
     background-color: rgb(227, 103, 103);
     padding: 10px 0;
     p {
       margin: 0;
       color: white;
-      font-size: 1.5rem;
+      font-size: 2.0rem;
     }
   }
   .day {
