--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -53,7 +53,7 @@
     <div class="medium-7 medium pull-5 columns">
       <h3>Community supported</h3>
       <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas, earum, recusandae itaque ipsa provident atque inventore repellat odio explicabo vel nam officiis quaerat et minus ea cumque omnis nostrum quos!
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium doloribus facere hic alias officiis eveniet ipsum. Nam, accusantium, quam, ea rem dolorum ad quibusdam aperiam quod suscipit deserunt inventore dicta.
       </p>
       <div class="arrow-down">
         <%= link_to "#healthy", class: "smooth arrow-down" do %>
