--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -1274,3 +1274,4 @@ $topbar-dropdown-label-bg: #222;
 .top-bar-section ul li:hover:not(.has-form) > a.orange {
   color: darken(#FF852A, 10%);
 }
+.label { font-weight: bold; }
