add home content, modifiy cookie expiration

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -53,7 +53,8 @@
     <div class="medium-7 medium pull-5 columns">
       <h3>Community supported</h3>
       <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium doloribus facere hic alias officiis eveniet ipsum. Nam, accusantium, quam, ea rem dolorum ad quibusdam aperiam quod suscipit deserunt inventore dicta.
+        This mission is supported by partnerships with St. Paul's, DCCG, NIU students, and through volunteers in the DeKalb community.
+        Please <%= link_to "contact us", '#contact', class: "smooth" %> if you are interested in volunteering or supporting this cause.
       </p>
       <div class="arrow-down">
         <%= link_to "#healthy", class: "smooth arrow-down" do %>
@@ -74,7 +75,8 @@
     <div class="medium-7 columns">
       <h3 class="white">Promoting healthy living</h3>
       <p class="white">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas, earum, recusandae itaque ipsa provident atque inventore repellat odio explicabo vel nam officiis quaerat et minus ea cumque omnis nostrum quos!
+        We are promoting healthy living in our community by sharing recipe ides and cooking methods.
+        <%= link_to "Check out our blog", "http://thrivemarket.tumblr.com/" %> to see what is in season, or what will be available at our next market day.
       </p>
       <div class="arrow-down">
         <%= link_to "#when", class: "smooth arrow-down" do %>
