--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -53,7 +53,7 @@
     <div class="medium-7 medium pull-5 columns">
       <h3>Community supported</h3>
       <p>
-        This mission is supported by partnerships with St. Paul's, DCCG, NIU students, and through volunteers in the DeKalb community.
+        This mission is supported by partnerships with St. Paul's Episcopal Church, DeKalb County Community Gardens, and volunteers in the NIU and DeKalb communities.
         Please <%= link_to "contact us", '#contact', class: "smooth" %> if you are interested in volunteering or supporting this cause.
       </p>
       <div class="arrow-down">
