fix og meta url

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,7 @@
     <title><%= content_for?(:title) ? yield(:title) : "Thrive Neighborhood Market & Community Garden" %></title>
     <meta name="keywords" content="DeKalb, community garden, thrive, neighborhood market, Thrive Neighborhood Market & Community Garden, St. Paul's Episcopal Church" />
     <meta name="description" content="<%= content_for?(:desc) ? yield(:desc) : 'Cultivating community by growing affordable local produce and sharing ideas for healthy living.' %>" />
-    <meta property="og:url" content="http://thrivemarket.org">
+    <meta property="og:url" content="http://www.thrivemarket.org">
     <meta property="og:title" content="<%= content_for?(:title) ? yield(:title) : 'Thrive Neighborhood Market & Community Garden' %>">
     <meta property="og:description" content="<%= content_for?(:desc) ? yield(:desc) : 'Cultivating community by growing affordable local produce and sharing ideas for healthy living.' %>">
     <meta property="og:image" content="https://s3.amazonaws.com/thrivemarket.org/images/background_tumblr.jpg">
