update email used for brace forms

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -233,7 +233,7 @@
         </div>
         <div class="row">
           <div class="medium-4 medium-offset-2 large-3 small-11 small-centered columns">
-            <input type="hidden" name="_next" value="//localhost:3000<%= thanks_path %>" />
+            <input type="hidden" name="_next" value="//thrivemarket.org<%= thanks_path %>" />
             <%= submit_tag "SEND MESSAGE", class: "button learn-more radius expand" %>
           </div>
         </div>
