--- a/app/views/webhooks/verified.xml.erb
+++ b/app/views/webhooks/verified.xml.erb
@@ -1,6 +1,6 @@
 <Response>
   <Sms>
-    Thank you for verifying your number. Have ideas for items to plant in our garden?  Just reply to this text with your ideas.
+    Thank you for verifying your number. Want to help us select what to plant in our garden?  Just reply to this text with your ideas.
     Reply STOP at any time to be removed from our updates.
   </Sms>
 </Response>
