remove survey modal

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,4 +1,4 @@
-<%= render 'static_pages/survey' %>
+<%#= render 'static_pages/survey' %>
 
 <div class="home-image f-topbar-fixed">
   <div class="row">
