add sestion about joining on tuesday nights for garden work nights

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -12,15 +12,15 @@
     </div>
   </div>
 </div>
-<!-- <div class="section survey", id="about">
+<div class="section about dashed-border" id="about">
   <div class="row">
     <div class="medium-12 columns">
-      <h3>Would you like to help us select what we will grow this year?</h3>
-      <a href="#" class="button learn-more small radius" data-reveal-id="myModal" data-reveal>Take our survey now</a>
+      <h3 class="center">Hangout with us on Tuesday evenings 6:30-7:30PM</h3>
+      <p class="center">Each Tuesday evening we get together for some fun, fellowship, and gardening.  We have a great mix of experienced gardeners and others who wouldn't exactly consider themselves a "green thumb" working and learning together.  Feel free to stop by if you would like to help.</p>
     </div>
   </div>
-</div> -->
-<div class="section black about", id="about">
+</div>
+<div class="section black about dashed-border", id="about">
   <div class="row">
     <div class="medium-5 columns center">
       <%= image_tag "cultivating.svg", class: "icon" %>
