darken footer, move work day section to be below market dates, add alert about work days

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -52,6 +52,9 @@ div.main-wrapper {
 .black {
   background-color: #333;
 }
+.dark-black {
+  background-color: #111;
+}
 .center {
   text-align: center;
 }
