--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,5 +1,5 @@
 <div id="footer">
-  <footer class="black">
+  <footer class="dark-black">
     <div class="row">
       <div class="medium-12 columns">
         <h6 class="light-gray center">
