--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -4,19 +4,15 @@
   <div class="row">
     <div class="medium-12 columns">
       <%= render 'layouts/messages' %>
+      <div data-alert class="alert-box secondary">
+        Want to help out with the garden? <%= link_to "Learn more", "#help", class: "smooth" %> about how you can help out.
+        <a href="#" class="close">&times;</a>
+      </div>
       <div class="logo-wrapper">
         <%= image_tag "logo.svg", alt: "Thrive Logo", class: "logo" %>
       </div>
       <h2 class="uvp">Cultivating community by growing affordable local produce and sharing ideas for healthy living.</h2>
       <%= link_to "Learn More", "#about", class: "button radius learn-more smooth" %>
-    </div>
-  </div>
-</div>
-<div class="section about dashed-border" id="about">
-  <div class="row">
-    <div class="medium-12 columns">
-      <h3 class="center">Hangout with us on Tuesday evenings 6:30-7:30PM</h3>
-      <p class="center">Each Tuesday evening we get together for some fun, fellowship, and gardening.  We have a great mix of experienced gardeners and others who wouldn't exactly consider themselves a "green thumb" working and learning together.  Feel free to stop by if you would like to help.</p>
     </div>
   </div>
 </div>
@@ -167,14 +163,22 @@
     </div>
   </div>
 </div>
-<div class="section black about", id="sponsors">
+<div class="section about black dashed-border" id="help">
+  <div class="row">
+    <div class="medium-12 columns">
+      <h3 class="center white">Hangout with us on Tuesday evenings 6:30-7:30PM</h3>
+      <p class="center white">Each Tuesday evening we get together for some fun, fellowship, and gardening.  We have a great mix of experienced gardeners and others who wouldn't exactly consider themselves a "green thumb" working and learning together.  Feel free to stop by if you would like to help.</p>
+    </div>
+  </div>
+</div>
+<div class="section about", id="sponsors">
   <div class="row">
     <div class="medium-12 columns sponsors">
-      <h3 class="white">Our community sponsors:</h3>
+      <h3 class="">Our community sponsors:</h3>
       <ul class="small-block-grid-1 medium-block-grid-2">
         <li class="center">
           <%= image_tag "st_pauls_logo.png" %>
-          <p class="white">St. Paul's Episcopal Church</p>
+          <p class="">St. Paul's Episcopal Church</p>
           <p class="center">
             <%= link_to "http://www.stpaulsdekalb.org/", class: "social-links" do %>
               <%= fa_icon "home" %>
@@ -189,7 +193,7 @@
         </li>
         <li class="center">
           <%= image_tag "dccg_logo.png" %>
-          <p class="white">DeKalb County Community Gardens</p>
+          <p class="">DeKalb County Community Gardens</p>
           <p class="center">
             <%= link_to "http://dekalbgardens.org/", class: "social-links" do %>
               <%= fa_icon "home" %>
@@ -203,10 +207,10 @@
     </div>
   </div>
 </div>
-<div class="section about dashed-border", id="contact">
+<div class="section about dashed-border black", id="contact">
   <div class="row">
     <div class="medium-12 columns">
-      <h3 class="center">Do you have questions, suggestions, or feedback?</h3>
+      <h3 class="center white">Do you have questions, suggestions, or feedback?</h3>
       <div class="form-wrapper">
         <%= form_tag "http://api.formspree.com/info@thrivemarket.org", :"data-abide" => "" do %>
         <div class="row">
