made offseason updates

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -4,10 +4,10 @@
   <div class="row">
     <div class="medium-12 columns">
       <%= render 'layouts/messages' %>
-      <div data-alert class="alert-box secondary">
+<!--       <div data-alert class="alert-box secondary">
         Want to help out with the garden? <%= link_to "Learn more", "#help", class: "smooth" %> about how you can help out.
         <a href="#" class="close">&times;</a>
-      </div>
+      </div> -->
       <div class="logo-wrapper">
         <%= image_tag "logo.svg", alt: "Thrive Logo", class: "logo" %>
       </div>
@@ -90,9 +90,13 @@
     <div class="large-12 small-8 small-centered medium-8 medium-centered columns center">
       <h3 class="center">Market Dates</h3>
       <h5 class="center">
-        Join us at <%= link_to "St. Paul's Episcopal Church", "http://stpaulsdekalb.org/" %> on the fourth Saturday of each month.
+        Our market dates for 2015 are still to be determined.<br/>Please sign up for SMS updates to be notified when we have released our schedule.
       </h5>
-      <div class="dates">
+      <br/>
+      <!-- <h5 class="center">
+        Join us at <%#= link_to "St. Paul's Episcopal Church", "http://stpaulsdekalb.org/" %> on the fourth Saturday of each month.
+      </h5> -->
+      <!-- <div class="dates">
         <ul class="small-block-grid-1 medium-block-grid-2 large-block-grid-4">
           <li>
             <div class="date-card">
@@ -139,7 +143,7 @@
             </div>
           </li>
         </ul>
-      </div>
+      </div> -->
     </div>
   </div>
   <div class="row">
@@ -167,7 +171,9 @@
   <div class="row">
     <div class="medium-12 columns">
       <h3 class="center white">Hangout with us on Tuesday evenings 6:30-7:30PM</h3>
-      <p class="center white">Each Tuesday evening we get together for some fun, fellowship, and gardening.  We have a great mix of experienced gardeners and others who wouldn't exactly consider themselves a "green thumb" working and learning together.  Feel free to stop by if you would like to help.</p>
+      <p class="center white">Starting around mid-May, we invite you to stop out to the garden for fun, fellowship, and gardening.  We have a great mix of experienced gardeners and others who wouldn't exactly consider themselves a "green thumb" working and learning together.  Feel free to stop by if you would like to help.</p>
+
+      <!-- <p class="center white">Each Tuesday evening we get together for some fun, fellowship, and gardening.  We have a great mix of experienced gardeners and others who wouldn't exactly consider themselves a "green thumb" working and learning together.  Feel free to stop by if you would like to help.</p> -->
     </div>
   </div>
 </div>
