add spam question, and add timer to fade it out after 10 secs

--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -180,3 +180,8 @@ input.large-font {
   box-shadow: none;
   text-align: center
 }
+
+// .question {
+//   visibility:hidden;
+//   display:none;
+// }
