--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -242,6 +242,19 @@
           </div>
         </div>
         <div class="row">
+          <div class="medium-4 medium-offset-2 small-11 small-centered columns">
+            <div class="question">
+              <!--[if IE]>
+              <%= label_tag :question, "What is 2+3?" %>
+              <![endif]-->
+              <div class="input-wrapper">
+                <%= text_field_tag :question, nil, placeholder: "What is 2+3?", required: true %>
+                <small class="error">An answer is required.</small>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row">
           <div class="medium-4 medium-offset-2 large-3 small-11 small-centered columns">
             <input type="hidden" name="_next" value="//www.thrivemarket.org<%= thanks_path %>" />
             <%= submit_tag "SEND MESSAGE", class: "button learn-more radius expand" %>
