add partial for contact form, comment out form and nav for form

--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -181,7 +181,7 @@ input.large-font {
   text-align: center
 }
 
-// .question {
-//   visibility:hidden;
-//   display:none;
-// }
+.question {
+  visibility:hidden;
+  display:none;
+}
