--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -213,55 +213,4 @@
     </div>
   </div>
 </div>
-<div class="section about dashed-border black", id="contact">
-  <div class="row">
-    <div class="medium-12 columns">
-      <h3 class="center white">Do you have questions, suggestions, or feedback?</h3>
-      <div class="form-wrapper">
-        <%= form_tag "http://api.formspree.com/info@thrivemarket.org", :"data-abide" => "" do %>
-        <div class="row">
-          <div class="medium-4 medium-offset-2 small-11 small-centered columns">
-            <!--[if IE]>
-            <%= label_tag :email %>
-            <![endif]-->
-            <div class="input-wrapper">
-              <%= email_field_tag :email, nil, placeholder: "Email", name: "_replyto", required: true, pattern: "email" %>
-              <small class="error">A valid email address is required.</small>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="medium-8 medium-centered small-11 small-centered columns">
-            <!--[if IE]>
-            <%= label_tag "Your Message" %>
-            <![endif]-->
-            <div class="input-wrapper">
-              <%= text_area_tag :content, nil, placeholder: "Enter your message here", rows: 4, name: "content", required: true %>
-              <small class="error">You must provide a message</small>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="medium-4 medium-offset-2 small-11 small-centered columns">
-            <div class="question">
-              <!--[if IE]>
-              <%= label_tag :question, "What is 2+3?" %>
-              <![endif]-->
-              <div class="input-wrapper">
-                <%= text_field_tag :question, nil, placeholder: "What is 2+3?", required: true %>
-                <small class="error">An answer is required.</small>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="medium-4 medium-offset-2 large-3 small-11 small-centered columns">
-            <input type="hidden" name="_next" value="//www.thrivemarket.org<%= thanks_path %>" />
-            <%= submit_tag "SEND MESSAGE", class: "button learn-more radius expand" %>
-          </div>
-        </div>
-        <% end %>
-      </div>
-    </div>
-  </div>
-</div>
+<%#= render 'contact' %>
