--- a/app/views/static_pages/_contact.html.erb
+++ b/app/views/static_pages/_contact.html.erb
@@ -3,7 +3,7 @@
     <div class="medium-12 columns">
       <h3 class="center white">Do you have questions, suggestions, or feedback?</h3>
       <div class="form-wrapper">
-        <%= form_tag "http://api.formspree.com/info@thrivemarket.org", :"data-abide" => "" do %>
+        <%= form_tag "http://formspree.io/info@thrivemarket.org", :"data-abide" => "" do %>
         <div class="row">
           <div class="medium-4 medium-offset-2 small-11 small-centered columns">
             <!--[if IE]>
