Add new garden dates to home page.

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -93,10 +93,10 @@
         Our market dates for 2015 are still to be determined.<br/>Please sign up for SMS updates to be notified when we have released our schedule.
       </h5>
       <br/>
-      <!-- <h5 class="center">
-        Join us at <%#= link_to "St. Paul's Episcopal Church", "http://stpaulsdekalb.org/" %> on the fourth Saturday of each month.
-      </h5> -->
-      <!-- <div class="dates">
+      <h5 class="center">
+        Join us at <%= link_to "St. Paul's Episcopal Church", "http://stpaulsdekalb.org/" %> on the third Saturday of each month.
+      </h5>
+      <div class="dates">
         <ul class="small-block-grid-1 medium-block-grid-2 large-block-grid-4">
           <li>
             <div class="date-card">
@@ -104,7 +104,7 @@
                 <p>June</p>
               </div>
               <div class="day">
-                <p>28</p>
+                <p>20</p>
                 <small>11AM - 2PM</small>
               </div>
             </div>
@@ -115,7 +115,7 @@
                 <p>July</p>
               </div>
               <div class="day">
-                <p>26</p>
+                <p>18</p>
                 <small>11AM - 2PM</small>
               </div>
             </div>
@@ -126,7 +126,7 @@
                 <p>Aug</p>
               </div>
               <div class="day">
-                <p>23</p>
+                <p>15</p>
                 <small>11AM - 2PM</small>
               </div>
             </div>
@@ -137,13 +137,13 @@
                 <p>Sept</p>
               </div>
               <div class="day">
-                <p>27</p>
+                <p>19</p>
                 <small>11AM - 2PM</small>
               </div>
             </div>
           </li>
         </ul>
-      </div> -->
+      </div>
     </div>
   </div>
   <div class="row">
