--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -4,10 +4,10 @@
   <div class="row">
     <div class="medium-12 columns">
       <%= render 'layouts/messages' %>
-<!--       <div data-alert class="alert-box secondary">
+      <div data-alert class="alert-box secondary">
         Want to help out with the garden? <%= link_to "Learn more", "#help", class: "smooth" %> about how you can help out.
         <a href="#" class="close">&times;</a>
-      </div> -->
+      </div>
       <div class="logo-wrapper">
         <%= image_tag "logo.svg", alt: "Thrive Logo", class: "logo" %>
       </div>
@@ -171,9 +171,9 @@
   <div class="row">
     <div class="medium-12 columns">
       <h3 class="center white">Hangout with us on Tuesday evenings 6:30-7:30PM</h3>
-      <p class="center white">Starting around mid-May, we invite you to stop out to the garden for fun, fellowship, and gardening.  We have a great mix of experienced gardeners and others who wouldn't exactly consider themselves a "green thumb" working and learning together.  Feel free to stop by if you would like to help.</p>
+      <!-- <p class="center white">Starting around mid-May, we invite you to stop out to the garden for fun, fellowship, and gardening.  We have a great mix of experienced gardeners and others who wouldn't exactly consider themselves a "green thumb" working and learning together.  Feel free to stop by if you would like to help.</p> -->
 
-      <!-- <p class="center white">Each Tuesday evening we get together for some fun, fellowship, and gardening.  We have a great mix of experienced gardeners and others who wouldn't exactly consider themselves a "green thumb" working and learning together.  Feel free to stop by if you would like to help.</p> -->
+      <p class="center white">Each Tuesday evening we get together for some fun, fellowship, and gardening.  We have a great mix of experienced gardeners and others who wouldn't exactly consider themselves a "green thumb" working and learning together.  Feel free to stop by if you would like to help.</p>
     </div>
   </div>
 </div>
