--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,13 +1,13 @@
 <%#= render 'static_pages/survey' %>
 
 <div class="home-image f-topbar-fixed">
+  <div data-alert class="alert-box orange">
+    Want to help out with the garden? <%= link_to "Learn more", "#help", class: "smooth" %> about our weekly garden hangouts.
+    <a href="#" class="close">&times;</a>
+  </div>
   <div class="row">
     <div class="medium-12 columns">
       <%= render 'layouts/messages' %>
-      <!-- <div data-alert class="alert-box secondary">
-        Want to help out with the garden? <%#= link_to "Learn more", "#help", class: "smooth" %> about how you can help out.
-        <a href="#" class="close">&times;</a>
-      </div> -->
       <div class="logo-wrapper">
         <%= image_tag "logo.svg", alt: "Thrive Logo", class: "logo" %>
       </div>
@@ -97,28 +97,26 @@
         Join us at <%= link_to "St. Paul's Episcopal Church", "http://stpaulsdekalb.org/" %> on the third Saturday of each month.
       </h5>
       <div class="dates">
-        <ul class="small-block-grid-1 medium-block-grid-2 large-block-grid-4">
-          <li>
+        <ul class="small-block-grid-1 medium-block-grid-2 large-block-grid-3">
+          <!-- <li>
             <div class="date-card">
               <div class="month radius">
                 <p>June</p>
               </div>
               <div class="day">
                 <p>TBD</p>
-                <small>Details Coming Soon</small>
-                <!-- <small>11AM - 2PM</small> -->
+                <small>11AM - 2PM</small>
               </div>
             </div>
-          </li>
+          </li> -->
           <li>
             <div class="date-card">
               <div class="month radius">
                 <p>July</p>
               </div>
               <div class="day">
-                <p>TBD</p>
-                <small>Details Coming Soon</small>
-                <!-- <small>11AM - 2PM</small> -->
+                <p>16</p>
+                <small>11AM - 2PM</small>
               </div>
             </div>
           </li>
@@ -128,9 +126,8 @@
                 <p>Aug</p>
               </div>
               <div class="day">
-                <p>TBD</p>
-                <small>Details Coming Soon</small>
-                <!-- <small>11AM - 2PM</small> -->
+                <p>20</p>
+                <small>11AM - 2PM</small>
               </div>
             </div>
           </li>
@@ -140,9 +137,8 @@
                 <p>Sept</p>
               </div>
               <div class="day">
-                <p>TBD</p>
-                <small>Details Coming Soon</small>
-                <!-- <small>11AM - 2PM</small> -->
+                <p>17</p>
+                <small>11AM - 2PM</small>
               </div>
             </div>
           </li>
@@ -175,9 +171,9 @@
   <div class="row">
     <div class="medium-12 columns">
       <h3 class="center white">Hangout with us on Tuesday evenings 6:30-7:30PM</h3>
-      <p class="center white">Starting around mid-May, we invite you to stop out to the garden for fun, fellowship, and gardening.  We have a great mix of experienced gardeners and others who wouldn't exactly consider themselves a "green thumb" working and learning together.  Feel free to stop by if you would like to help.</p>
+      <!-- <p class="center white">Starting around mid-May, we invite you to stop out to the garden for fun, fellowship, and gardening.  We have a great mix of experienced gardeners and others who wouldn't exactly consider themselves a "green thumb" working and learning together.  Feel free to stop by if you would like to help.</p> -->
 
-      <!-- <p class="center white">Each Tuesday evening we get together for some fun, fellowship, and gardening.  We have a great mix of experienced gardeners and others who wouldn't exactly consider themselves a "green thumb" working and learning together.  Feel free to stop by if you would like to help.</p> -->
+      <p class="center white">Each Tuesday evening we get together for some fun, fellowship, and gardening.  We have a great mix of experienced gardeners and others who wouldn't exactly consider themselves a "green thumb" working and learning together.  Feel free to stop by if you would like to help.</p>
     </div>
   </div>
 </div>
