Add animation to icons on home page.

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -18,9 +18,7 @@
 </div>
 <div class="section black about dashed-border", id="about">
   <div class="row">
-    <div class="medium-5 columns center">
-      <%= image_tag "cultivating.svg", class: "icon" %>
-    </div>
+    <div class="medium-5 columns center" id='cultivating_icon'></div>
     <div class="medium-7 columns">
       <h3 class="white">Helping our neighbors</h3>
       <p class="white">
@@ -43,9 +41,7 @@
 </div>
 <div class="section about dashed-border", id="community">
   <div class="row">
-    <div class="medium-5 medium-push-7 columns center">
-      <%= image_tag "community_garden.svg", class: "icon" %>
-    </div>
+    <div class="medium-5 medium-push-7 columns center" id='community_icon'></div>
     <div class="medium-7 medium pull-5 columns">
       <h3>Community supported</h3>
       <p>
@@ -65,9 +61,7 @@
 </div>
 <div class="section black about", id="healthy">
   <div class="row">
-    <div class="medium-5 columns center">
-      <%= image_tag "healthy.svg", class: "icon" %>
-    </div>
+    <div class="medium-5 columns center" id='healthy_icon'></div>
     <div class="medium-7 columns">
       <h3 class="white">Promoting healthy living</h3>
       <p class="white">
