--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -83,12 +83,12 @@
   <div class="row">
     <div class="large-12 small-8 small-centered medium-8 medium-centered columns center">
       <h3 class="center">Market Dates</h3>
-      <h5 class="center">
+      <!-- <h5 class="center">
         Our market dates for 2016 are still to be determined.<br/>Please sign up for SMS updates to be notified when we have released our schedule.
       </h5>
-      <br/>
+      <br/> -->
       <h5 class="center">
-        Join us at <%= link_to "St. Paul's Episcopal Church", "http://stpaulsdekalb.org/" %> on the third Saturday of each month.
+        Join us at <%= link_to "St. Paul's Episcopal Church", "http://stpaulsdekalb.org/" %> on the following Saturdays:
       </h5>
       <div class="dates">
         <ul class="small-block-grid-1 medium-block-grid-2 large-block-grid-3">
